# BoostiFy

./: .gitignore  BoostiFy.spec  BoostiFy.version_info.txt  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
BoostiFy/: __init__.py
BoostiFy/GUI/: main_window.py
BoostiFy/GUI/core/: async_tasks.py  game_storage.py  statistics_storage.py
BoostiFy/GUI/screens/: __init__.py  main_screen.py  settings_screen.py  statistics_screen.py  table_widget.py
BoostiFy/GUI/utils/: helpers.py  styles.py
BoostiFy/GUI/widgets/: custom_title_bar.py  editable_label.py  toast.py
BoostiFy/core/: app_paths.py  booster.py  process_group.py  runtime_paths.py  steam_lookup.py
BoostiFy/runtime/: Boostify.Runtime.sln  build.py
BoostiFy/runtime/Steam/: Boostify.Runtime.Steam.csproj  SteamAccessException.cs  SteamSession.cs
BoostiFy/runtime/Steam/Features/: Achievements.cs  AppOwnership.cs
BoostiFy/runtime/Steam/Interop/: SteamClientConnection.cs  SteamClientLibrary.cs  VTableBinding.cs
BoostiFy/runtime/Steam/Schemas/: AchievementCatalog.cs  BinaryKvReader.cs  (+1 more)
BoostiFy/runtime/Worker/: AchievementWorkflow.cs  App.config  BoostSession.cs  Boostify.Runtime.Worker.csproj  MemoryTrimmer.cs  OwnershipProtocol.cs  Program.cs  RuntimeDiagnostics.cs  WorkerLog.cs  WorkerOptions.cs
BoostiFy/upload/: config.example.json
scripts/: analyze.py  clean.py  functional_qa.py  package.py  scan.py  smoke_test.py  test.py
tests/: test_booster_eta.py  test_booster_state.py  test_lookup.py  test_statistics.py  test_storage.py
