[project]
name = "BoostiFy"
version = "1.0.0"
description = "Windows desktop application for managing Steam activity and achievements."
requires-python = ">=3.11"
authors = [{ name = "deeCaT" }]
license = "MIT"
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
